Doing the terms and conditions and privacy pages. 28/03/2024

--- a/investors.html
+++ b/investors.html
@@ -420,8 +420,8 @@
             <!-- <p>©Copyright 2024 Help4PropertyDeals. All rights are reserved.</p> -->
             <p>&copy; <span id="current-year"> </span> Help4PropertyDeals. All rights reserved.</p>
             <p><a href="">Powered by WebMagnetism.com</a></p>
-            <p><a href="">Terms and Conditions</a></p>
-            <p><a href="">Privacy Policy</a></p>
+            <p><a href="terms&conditions.html">Terms and Conditions</a></p>
+            <p><a href="privacy.html">Privacy Policy</a></p>
         </div>
     </footer>
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
