--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boilerplate | help4propertydeals</title>
+    <title>Terms&Conditions | help4propertydeals</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/subscribe.css">
+    <link rel="stylesheet" href="assets/css/terms.css">
 </head>
 <body>
     <header class="header">
@@ -72,33 +73,94 @@
         <section class="section__hero">
             <div class="hero__text">
                 <div class="heading__hero">
-                    <h1>Property deals</h1>
+                    <h1>Terms & Conditions</h1>
                 </div>
                 <p class="hero__p">
-                    Collaborating with you to create a thriving and strategic property investment portfolio.
+                    Rules and guidelines that one must agree to abide by in order to use a service or product. These documents are legally binding and outline the rights and responsibilities of both the service provider and the user.
                 </p>
-            </div>
-            <div class="button__container">
-                <button class="button red-button">
-                    <div class="button-content">
-                      <span class="text">Investors</span>
-                      <!-- <div class="arrow">
-                        <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                      </div> -->
-                    </div>
-                </button>
-                <button class="button blue-button">
-                    <div class="button-content">
-                      <span class="text">Landlords</span>
-                      <!-- <div class="arrow">
-                        <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                      </div> -->
-                    </div>
-                </button>
             </div>
         </section>
     </header>
     <div class="container__body">
+        <section class="section section__terms">
+            <div class="terms__container">
+                <div class="term__text">
+                    <h1 class="heading">
+                        Terms And Conditions
+                    </h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. cumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. 
+                    </p>
+                </div>
+
+            </div>
+
+            <div class="details__container">
+                <h1 class="heading" id="details__headings">
+                    Term Details
+                </h1>
+                <div class="terms__list">
+                    <ol>
+                        <li>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Cumsan pellentesque arcu pulvinar augue nibh malesuada nullam
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Cumsan pellentesque arcu pulvinar augue nibh malesuada nullam
+                            </p>
+                        </li>
+                        <li>
+                            <p>
+                                Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet 
+                            </p>
+                        </li>
+                    </ol>
+                </div>
+            </div>
+        </section>
+
         <!-- SECTION FORM -->
         <section class="section section__form">
             <div class="form__container">
