added links to the buttons 31/03/2024

--- a/about.html
+++ b/about.html
@@ -160,11 +160,13 @@
                                 Why invest?
                             </h1>
                         </div>
-                        <button class="button blue-button">
-                            <div class="button-content">
-                              <span class="text">Contact us</span>
-                            </div>
-                        </button>
+                        <a href="contact.html" class="button-link">
+                            <button class="button blue-button">
+                                <div class="button-content">
+                                    <span class="text">Contact us</span>
+                                </div>
+                            </button>
+                        </a>
                     </div>
                     <div class="invest__content">
                         <p>There are only so many hours in a day, and the prevailing business model worldwide often involves exchanging time for money. Many individuals follow this model through traditional employment or by establishing businesses that offer products or services. While this approach can be effective, it has inherent limitations—namely, the finite nature of time and resources.</p>
