--- a/investors.html
+++ b/investors.html
@@ -241,14 +241,13 @@
                     <p>
                         We charge no marketing fees; hold landlords to no obligations and only charge when we find the tenants on a strictly no-let, no-fee basis. In most instances the initial meeting will be at the property in question, we will consult on what needs to be done prior to let, what market we will be aiming for, time frames and rental potential.
                     </p>
-                    <button class="button blue-button">
-                        <div class="button-content">
-                          <span class="text">Contact us</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <a href="contact.html" class="button-link">
+                        <button class="button blue-button">
+                            <div class="button-content">
+                                <span class="text">Contact us</span>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="image__container">
                     <img src="assets/images/pages/investors/image-1.png" alt="">
@@ -277,14 +276,14 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae
                     </p>
-                    <button class="button red-button">
-                        <div class="button-content">
-                          <span class="text">Contact us</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <!--Button Link-->
+                    <a href="contact.html" class="button-link">
+                        <button class="button red-button">
+                            <div class="button-content">
+                                <span class="text">Contact us</span>
+                            </div>
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
