--- a/landlord.html
+++ b/landlord.html
@@ -101,14 +101,13 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulumnibh. Gravida fames vulputate justo sodales dui. Vestibulum Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nullaLorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum netus 
                     </p>
-                    <button class="button blue-button">
-                        <div class="button-content">
-                          <span class="text">Landlords</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <a href="landlord.html" class="button-link">
+                        <button class="button blue-button">
+                            <div class="button-content">
+                                <span class="text">Landlords</span>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="form__section" id="form2__box">
                     <form action="submit_form.php" method="POST" class="web__form">
@@ -257,14 +256,13 @@
                     <p>
                         We charge no marketing fees; hold landlords to no obligations and only charge when we find the tenants on a strictly no-let, no-fee basis. In most instances the initial meeting will be at the property in question, we will consult on what needs to be done prior to let, what market we will be aiming for, time frames and rental potential.
                     </p>
-                    <button class="button red-button">
-                        <div class="button-content">
-                          <span class="text">Contact us</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <a href="contact.html" class="button-link">
+                        <button class="button red-button">
+                            <div class="button-content">
+                                <span class="text">Contact us</span>
+                            </div>
+                        </button>
+                    </a>
                 </div>
                 <div class="image__container">
                     <img src="assets/images/pages/landlords/image-2.png" alt="">
@@ -339,14 +337,13 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae
                     </p>
-                    <button class="button blue-button">
-                        <div class="button-content">
-                          <span class="text">Contact us</span>
-                          <!-- <div class="arrow">
-                            <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                          </div> -->
-                        </div>
-                    </button>
+                    <a href="contact.html" class="button-link">
+                        <button class="button blue-button">
+                            <div class="button-content">
+                                <span class="text">Contact us</span>
+                            </div>
+                        </button>
+                    </a>
                 </div>
             </div>
         </section>
