--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact | help4propertydeals </title>
+    <link rel="shortcut icon" type="x-icon" href="assets/images/logo/logo-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -57,10 +58,10 @@
                             <a class="nav-link" href="services.html"><span>Services</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span>Property</span></a>
+                            <a class="nav-link" href="property.html"><span>Property</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span></span>Insights</a>
+                            <a class="nav-link" href="#"><span>Insights</span></a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="#"><span>Case Study</span></a>
