--- a/property.html
+++ b/property.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms&Conditions | help4propertydeals</title>
+    <title>Property | help4propertydeals</title>
     <link rel="shortcut icon" type="x-icon" href="assets/images/logo/logo-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/subscribe.css">
-    <link rel="stylesheet" href="assets/css/terms.css">
+    <link rel="stylesheet" href="assets/css/property.css">
 </head>
 <body>
     <header class="header">
@@ -58,7 +58,7 @@
                             <a class="nav-link" href="property.html"><span>Property</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span>Insights</span></a>
+                            <a class="nav-link" href="#"><span></span>Insights</a>
                         </li>
                         <li class="nav-item ">
                             <a class="nav-link" href="#"><span>Case Study</span></a>
@@ -74,152 +74,162 @@
         <section class="section__hero">
             <div class="hero__text">
                 <div class="heading__hero">
-                    <h1>Terms & Conditions</h1>
+                    <h1>Property deals</h1>
                 </div>
                 <p class="hero__p">
-                    Rules and guidelines that one must agree to abide by in order to use a service or product. These documents are legally binding and outline the rights and responsibilities of both the service provider and the user.
+                    Collaborating with you to create a thriving and strategic property investment portfolio.
                 </p>
             </div>
         </section>
     </header>
     <div class="container__body">
-        <section class="section section__terms">
-            <div class="terms__container">
-                <div class="term__text">
-                    <h1 class="heading">
-                        Terms And Conditions
-                    </h1>
-                    <p>
-                        Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. cumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. 
-                    </p>
-                </div>
-
-            </div>
-
-            <div class="details__container">
-                <h1 class="heading" id="details__headings">
-                    Term Details
-                </h1>
-                <div class="terms__list">
-                    <ol>
-                        <li>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Cumsan pellentesque arcu pulvinar augue nibh malesuada nullam
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Lorem ipsum dolor sit amet consectetur. Eu massa turpis adipiscing libero rhoncus posuere tempus. Sed fringilla malesuada felis vitae. Montes mattis ultrices maecenas et. Ut ultricies viverra volutpat pellentesque diam condimentum luctus purus. 
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Cumsan pellentesque arcu pulvinar augue nibh malesuada nullam
-                            </p>
-                        </li>
-                        <li>
-                            <p>
-                                Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet accumsan lorem. Ultricies nulla odio bibendum convallis maecenas.Accumsan pellentesque arcu pulvinar augue nibh malesuada nullam nunc. Blandit tellus amet vulputat massa justo. Congue et consectetur amet quam. Vitae pellentesque purus amet 
-                            </p>
-                        </li>
-                    </ol>
-                </div>
-            </div>
-        </section>
-
         <!-- SECTION FORM -->
-        <section class="section section__form">
-            <div class="form__container">
-
-                <div class="form__section">
-                    <form action="" class="web__form">
-                        <div class="heading__container">
-                            <h1 class="heading">
-                                Need extra information? 
-                            </h1>
-                            <p>
-                                Send us your details and we will contact you soon.
-                            </p>
-                        </div>
-
-                        <div class="input__box">
-                            <input type="text" class="input" name="name" placeholder="Name">
-                            <input type="tel" class="input" name="phone" placeholder="Telephone">
-                            <input type="email" class="input" name="email" placeholder="Email">
-                        </div>
-                        
-                       
-                        <div class="checkbox-container">
-                            <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
-                        </div>
-
-                        <button class="button red-button btn__form">
-                            <div class="button-content">
-                              <span class="text">Send</span>
+        <section class="section section__projects">
+            <div class="project__container">
+                <div class="project__content">
+                    <ul class="button__tabs">
+                        <li><h2><a href="#completed-project"  class="project__links">Completed Project</a></h2></li>
+                        <li><h2><a href="#current-project" class="project__links">Current Project</a></h2></li>
+                    </ul>
+                    <div class="project__cards">
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-02.jpg" alt="" class="project__img">
+                                </a>
                             </div>
-                        </button>
-
-                    </form>
-                </div>
-
-                <div class="landlord__image">
-                    <img src="assets/images/pages/home/image-7.png" alt="">
-                </div>
-            </div>
-        </section>
-
-        <!-- SECTION NEWSLETTER -->
-        <section class="section section__subscribe">
-            <div class="subscribe__container">
-                <div class="container2__image">
-                    <img src="assets/images/pages/home/image-8.png" alt="">
-                </div>
-                <div class="subscribe__card">
-                    <div class="heading__container">
-                        <h1 class="heading">
-                            Subscriber Newsletter 
-                        </h1>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="input-box">
-                        <input type="email" placeholder="Enter your email..." />
-                        <button class="button__sub">Subscribe Now</button>
-                    </div>
+                    <button class="button red-button" id="button__more">
+                        <div class="button-content">
+                            <span class="text">See More</span>
+                        </div>
+                    </button>
                 </div>
             </div>
         </section>
@@ -300,6 +310,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="assets/js/property.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
