more progress on property and case-study page 08/04/2024

--- a/home.html
+++ b/home.html
@@ -70,7 +70,7 @@
                             <a class="nav-link" href="#"><span>Insights</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span>Case Study</span></a>
+                            <a class="nav-link" href="case-study.html"><span>Case Study</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"><span>Contact</span></a>
@@ -110,6 +110,7 @@
             </div>
         </section>
     </header>
+
     <div class="container__body">
         <!-- BENEFITS SECTION -->
         <section class="section section__benefits">
@@ -269,7 +270,7 @@
                     <div class="scrollbar-thumb"></div>
                   </div>
                 </div>
-              </div>
+            </div>
         </section>
 
         <!-- VIDEO SECTION -->
