--- a/privacy.html
+++ b/privacy.html
@@ -62,7 +62,7 @@
                             <a class="nav-link" href="#"><span>Insights</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span>Case Study</span></a>
+                            <a class="nav-link" href="case-study.html"><span>Case Study</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"><span>Contact</span></a>
