--- a/property.html
+++ b/property.html
@@ -58,10 +58,10 @@
                             <a class="nav-link" href="property.html"><span>Property</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span></span>Insights</a>
+                            <a class="nav-link" href="#"><span>Insights</span></a>
                         </li>
                         <li class="nav-item ">
-                            <a class="nav-link" href="#"><span>Case Study</span></a>
+                            <a class="nav-link" href="case-study.html"><span>Case Study</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="contact.html"><span>Contact</span></a>
@@ -83,7 +83,7 @@
         </section>
     </header>
     <div class="container__body">
-        <!-- SECTION FORM -->
+        <!-- SECTION Projects -->
         <section class="section section__projects">
             <div class="project__container">
                 <div class="project__content">
@@ -91,11 +91,145 @@
                         <li><h2><a href="#completed-project"  class="project__links">Completed Project</a></h2></li>
                         <li><h2><a href="#current-project" class="project__links">Current Project</a></h2></li>
                     </ul>
-                    <div class="project__cards">
+                    <div class="project__cards" id="completed-projects">
                         <div class="project__card">
                             <div class="project__image">
                                 <a href="" class="project">
-                                <img src="assets/images/property-photos/SERA-02.jpg" alt="" class="project__img">
+                                <img src="assets/images/property-photos/SERA-01.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-03.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-08.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-09.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-19.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-16.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-25.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-30.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-28.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-31.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-29.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
+                                </a>
+                            </div>
+                            <div class="project__text">
+                                <h3>London House</h3>
+                                <p>2 Bedroom Flat</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="project__cards" id="current-projects">
+                        <div class="project__card">
+                            <div class="project__image">
+                                <a href="" class="project">
+                                <img src="assets/images/property-photos/SERA-33.jpg" alt="" class="project__img">
                                 </a>
                             </div>
                             <div class="project__text">
