adding privacy page links on forms 11/04/2024

--- a/investors.html
+++ b/investors.html
@@ -157,7 +157,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span><a href="privacy.html">Privacy Policy.</a></span></label>
                         </div>
 
                         <button class="button red-button btn__form">
@@ -313,7 +313,7 @@
                        
                         <div class="checkbox-container">
                             <input type="checkbox" id="subscribe" name="subscribe">
-                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span>Privacy Policy.</span> </label>
+                            <label for="subscribe" class="label">I agree to have my information stored&nbsp<span><a href="privacy.html">Privacy Policy.</a></span></label>
                         </div>
 
                         <button class="button red-button btn__form">
