--- a/404.html
+++ b/404.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-xxl">
                 <div class="logo navbar-brand">
                     <a href="home.html">
