--- a/insights.html
+++ b/insights.html
@@ -18,7 +18,7 @@
 <body>
     <header class="header">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-xxl">
                 <div class="logo navbar-brand">
                     <a href="home.html">
@@ -79,8 +79,10 @@
         </section>
     </header>
     <div class="container__body">
-        
     </div>
+
+    <div class="container"></div>
+        
 
     <footer class="footer">
         <div class="footer__container">
