property details page 19/04/2024

--- a/terms&conditions.html
+++ b/terms&conditions.html
@@ -218,7 +218,7 @@
                     </div>
                     <div class="input-box">
                         <input type="email" placeholder="Enter your email..." />
-                        <button class="button__sub">Subscribe Now</button>
+                        <button class="button__sub">Subscribe</button>
                     </div>
                 </div>
             </div>
