--- a/home.html
+++ b/home.html
@@ -679,7 +679,7 @@
                     </div>
                     <div class="input-box">
                         <input type="email" placeholder="Enter your email..." />
-                        <button class="button__sub">Subscribe Now</button>
+                        <button class="button__sub">Subscribe</button>
                       </div>
                 </div>
             </div>
