--- a/property-details.html
+++ b/property-details.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Boilerplate | Help4PropertyDeals</title>
+    <title>Property Details | Help4PropertyDeals</title>
     <link rel="shortcut icon" type="x-icon" href="assets/images/logo/logo-icon.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="assets/css/footer.css">
     <link rel="stylesheet" href="assets/css/form.css">
     <link rel="stylesheet" href="assets/css/subscribe.css">
+    <link rel="stylesheet" href="assets/css/details.css">
 </head>
 <body>
     <header class="header">
@@ -73,33 +74,94 @@
         <section class="section__hero">
             <div class="hero__text">
                 <div class="heading__hero">
-                    <h1>Property deals</h1>
+                    <h1>Property details</h1>
                 </div>
-                <p class="hero__p">
-                    Collaborating with you to create a thriving and strategic property investment portfolio.
-                </p>
-            </div>
-            <div class="button__container">
-                <button class="button red-button">
-                    <div class="button-content">
-                      <span class="text">Investors</span>
-                      <!-- <div class="arrow">
-                        <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                      </div> -->
-                    </div>
-                </button>
-                <button class="button blue-button">
-                    <div class="button-content">
-                      <span class="text">Landlords</span>
-                      <!-- <div class="arrow">
-                        <img src="assets/img/shapes-icons/icons/arrow.png" alt="">
-                      </div> -->
-                    </div>
-                </button>
             </div>
         </section>
     </header>
     <div class="container__body">
+
+        <!-- SECTION Summary -->
+        <section class="section section__summary">
+            <div class="summary__container">
+                <div class="summary__text">
+                    <h1>Property Summary</h1>
+                    <p>
+                        Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc 
+                    </p>
+                </div>
+                
+            </div>
+        </section>
+
+        <!-- SECTION Bullet point -->
+        <section class="section section__bullet">
+            <div class="bullet__container">
+                <ul class="details-list">
+                    <li>3 bedroom mid terraced house in very good condition</li>
+                    <li>City: London</li>
+                    <li>Purchase Price – £250,000</li>
+                    <li>Achievable rent – £750 – £775</li>
+                    <li>2 double bedrooms and 1 single bedroom</li>
+                    <li>Modern kitchen</li>
+                    <li>Modern downstairs shower room</li>
+                    <li>Low maintenance back garden and on street parking</li>
+                </ul>
+                <div class="image-container">
+                    <img src="assets/images/pages/property-details/image-4.png" alt="">
+                </div>
+            </div>
+        </section>
+
+        <!-- SECTION financial -->
+        <section class="section section__financial">
+            <div class="financial__container">
+                <div class="financial__card">
+                    <div class="heading-container">
+                        <h2>Key Financial - Mortage purchase</h2>
+                    </div>
+                    <ul class="financial__list">
+                        <li>
+                            <p>Purchase Price</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Deposit (based on 25% loan to value)</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Stamp Duty Land Tax (not applicable for first property purchase)</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Legal Fees*</p>
+                            <p>£1000</p>
+                        </li>
+                        <li>
+                            <p>Survey*</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Council Licence Fee</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Repairs*</p>
+                            <p>£150000</p>
+                        </li>
+                        <li>
+                            <p>Sourcing Fee</p>
+                            <p>£9000</p>
+                        </li>
+                        <li>
+                            <p>Total Estimated spend</p>
+                            <p>£48000</p>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </section>
+
         <!-- SECTION FORM -->
         <section class="section section__form">
             <div class="form__container">
@@ -143,7 +205,7 @@
         </section>
 
         <!-- SECTION NEWSLETTER -->
-        <section class="section section__subscribe">
+        <!-- <section class="section section__subscribe">
             <div class="subscribe__container">
                 <div class="container2__image">
                     <img src="assets/images/pages/home/image-8.png" alt="">
@@ -160,7 +222,7 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
     </div>
 
     <footer class="footer">
