--- a/property-details.html
+++ b/property-details.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
     <!-- <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css" /> -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="assets/css/general.css">
     <link rel="stylesheet" href="assets/css/button.css">
     <link rel="stylesheet" href="assets/css/header.css">
@@ -19,7 +20,7 @@
 <body>
     <header class="header">
         <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-dark sticky-top">
+        <nav class="navbar navbar-expand-lg navbar-dark fixed-top">
             <div class="container-xxl">
                 <div class="logo navbar-brand">
                     <a href="home.html">
@@ -74,8 +75,11 @@
         <section class="section__hero">
             <div class="hero__text">
                 <div class="heading__hero">
-                    <h1>Property details</h1>
+                    <h1>property details</h1>
                 </div>
+                <!-- <p class="hero__p">
+                    Lorem ipsum dolor sit amet consectetur. Netus nisi tortor donec convallis nulla netus cras netus nibh. Gravida fames vulputate justo sodales dui. Vestibulum dignissim aliquam vitae posuere 
+                </p> -->
             </div>
         </section>
     </header>
@@ -89,6 +93,27 @@
                     <p>
                         Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae molestie sapien sit. Dolor varius quis sit amet in. Fermentum pharetra nunc 
                     </p>
+                </div>
+                <div class="summary__slides">
+                    <div class="slide__img">
+                        <img src="assets/images/pages/property-details/image-1.png" alt="">
+                        <img src="assets/images/pages/property-details/image-2.png" alt="">
+                        <div class="slide__col">
+                            <img src="assets/images/pages/property-details/image-3.png" alt="">
+                            <div class="button__box">
+                                <button id="prev-slide" class="slide-button material-symbols-rounded">
+                                    chevron_left
+                                </button>
+                                <span id="slide-counter">1/8</span> <!-- Dynamic counter here -->
+                                <button id="next-slide" class="slide-button material-symbols-rounded">
+                                    chevron_right
+                                </button>
+                            </div>
+                            <p>
+                                Lorem ipsum dolor sit amet consectetur. Orci scelerisque praesent cursus sed magna dui nisl pretium diam. Lacus risus massa erat suspendisse vitae mo
+                            </p>
+                        </div>
+                    </div>
                 </div>
                 
             </div>
@@ -281,6 +306,7 @@
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="assets/js/slides.js"></script>
     <script src="assets/js/main.js"></script>
 </body>
 </html>
