doing the slide show in property-details page

--- a/property.html
+++ b/property.html
@@ -87,10 +87,6 @@
         <section class="section section__projects">
             <div class="project__container">
                 <div class="project__content">
-                    <!-- <ul class="button__tabs">
-                        <li><h2><a href="#completed-project"  class="project__links">Completed Project</a></h2></li>
-                        <li><h2><a href="#current-project" class="project__links">Current Project</a></h2></li>
-                    </ul> -->
                     <!-- Tab navigation -->
                     <ul class="nav nav-tabs button__tabs" id="projectTabs" role="tablist">
                         <li class="nav-item" role="presentation">
@@ -241,7 +237,7 @@
 
 
                         <!-- CURRENT PROJECT CARDS -->
-                        <!-- <div class="tab-pane fade project__cards" id="current-projects" role="tabpanel" aria-labelledby="current-projects-tab">
+                        <div class="tab-pane fade project__cards" id="current-projects" role="tabpanel" aria-labelledby="current-projects-tab">
                             
                             <div class="project__card">
                                 <div class="project__image">
@@ -375,7 +371,7 @@
                                     <p>2 Bedroom Flat</p>
                                 </div>
                             </div>
-                        </div> -->
+                        </div>
                     </div>
 
                     <!-- <div class="project__cards" id="completed-projects">
