adding more images to the slide show in property-details page

--- a/property-details.html
+++ b/property-details.html
@@ -101,12 +101,23 @@
                     <div class="slide__img">
                         <!-- New div for containing all images -->
                         <div class="images-container">
-                            <!-- <img class="image-show" src="assets/images/pages/property-details/image-1.png" alt="">
-                            <img class="image-show" src="assets/images/pages/property-details/image-2.png" alt="">
-                            <img class="image-show" src="assets/images/pages/property-details/image-3.png" alt=""> -->
+                            <!-- IMAGE SLIDES  -->
                             <img class="image-show" src="assets/images/property-photos/SERA-01.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-02.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-03.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-04.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-05.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-06.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-07.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-08.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-09.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-10.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-11.jpg" alt="">
+                            <!-- <img class="image-show" src="assets/images/property-photos/SERA-12.jpg" alt=""> -->
+                            <img class="image-show" src="assets/images/property-photos/SERA-13.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-14.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-15.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-16.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-17.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-18.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-19.jpg" alt="">
@@ -116,7 +127,14 @@
                             <img class="image-show" src="assets/images/property-photos/SERA-23.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-24.jpg" alt="">
                             <img class="image-show" src="assets/images/property-photos/SERA-25.jpg" alt="">
-
+                            <img class="image-show" src="assets/images/property-photos/SERA-26.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-27.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-28.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-29.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-30.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-31.jpg" alt="">
+                            <!-- <img class="image-show" src="assets/images/property-photos/SERA-32.jpg" alt="">
+                            <img class="image-show" src="assets/images/property-photos/SERA-33.jpg" alt=""> -->
                             <!-- Additional images can be added here -->
                         </div>
                         
