recentering the history heading on the about page

--- a/property.html
+++ b/property.html
@@ -238,7 +238,7 @@
 
                         <!-- CURRENT PROJECT CARDS -->
                         <div class="tab-pane fade project__cards" id="current-projects" role="tabpanel" aria-labelledby="current-projects-tab">
-                            
+                            <!-- Example card for current projects -->
                             <div class="project__card">
                                 <div class="project__image">
                                     <a href="property-details.html" class="project">
