Initial commit for fresh repository

--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
                 <div class="history__container">
                     <div class="history__text">
                         <div class="heading__container">
-                            <h1 class="heading">
+                            <h1 class="heading" id="history__head">
                                 Our History 
                             </h1>
                         </div>
